[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "actions-python"
version = "0.1.3"
description = "GitHub Actions Python Toolkit"
license = "MIT"
authors = [
    { name = "sudosubin", email = "sudosubin@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 88
select = ["B", "E", "F", "I", "N", "RUF"]
src = ["packages/*"]

[tool.ruff.isort]
combine-as-imports = true

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if (typing\\.)?TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.rye]
managed = true
dev-dependencies = [
    "mypy~=1.6.1",
    "pre-commit>=3.5.0",
    "pyproject-fmt>=1.2.0",
    "pyright~=1.1.332",
    "ruff~=0.1.1",
    "tox~=4.11.3",
    "tox-rye @ git+https://github.com/bluss/tox-rye@0.3.0",
    "typer[all]>=0.9.0",
    "types-aiofiles~=23.2.0.0",
]

[tool.rye.scripts]
test = { chain = ["test:clean", "workspaces foreach run test", "test:report"] }
"test:clean" = { cmd = "coverage erase" }
"test:report" = { chain = ["coverage combine", "coverage report", "coverage html"] }
workspace = { cmd = "python -m contrib.cli workspace" }
workspaces = { cmd = "python -m contrib.cli workspaces" }

[tool.rye.workspace]
members = ["packages/*"]
